# Document-RAG

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  TODO-DOCKER-OPTIMIZATION.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Dockerfile  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
backend/app/: config.py  main.py
backend/app/chunking/: __init__.py  engine.py
backend/app/database/: __init__.py  qdrant_client.py
backend/app/models/: __init__.py  model_factory.py
backend/app/observability/: __init__.py  metrics.py
backend/app/rag/: __init__.py  orchestrator.py
backend/app/utils/: __init__.py  batch_embed.py
backend/tests/: conftest.py
backend/tests/integration/: test_document_conversion.py  test_embed_api.py  test_rerank_api.py
backend/tests/unit/: test_batch_embedding.py  test_chunking_engine.py  test_metrics.py  test_model_factory.py  test_qdrant_client.py  test_rag_orchestrator.py
embed-api/: Dockerfile  embed_api.py  requirements.txt
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App-minimal.tsx  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatWindow.tsx  FileList.tsx  FileUpload.tsx
frontend/src/components/ui/: button.tsx  card.tsx
ml-api/: Dockerfile  ml_api.py  pyproject.toml  test_ml_api.py
qdrant/: Dockerfile
rerank-api/: Dockerfile  requirements.txt  rerank_api.py
